added English General page

--- a/views/en/general.handlebars
+++ b/views/en/general.handlebars
@@ -124,7 +124,6 @@
                                 <h1 class="text-4xl sm:text-5xl text-right text-white font-semibold">
                                     {{priceNow}}
                                 </h1>
-                                <img src="/icons/increase.png" class="w-[35px] h-[35px]">
                             </div>
                         </div>
 
@@ -162,7 +161,7 @@
                 
                 <!-- left content -->
                 <a href="/en/weather" class="hover:-translate-y-1 hover:scale-100 transition ease-in-out duration-300 ">
-                    <div class="bg-[#F4E9CD] bg-cover bg-top bg-no-repeat w-full h-full flex grid grid-cols-1 grid-rows-3 gap-y-4 rounded-3xl sm:p-8 p-3 shadow-md">
+                    <div class="bg-[#FCF5E5] bg-cover bg-top bg-no-repeat w-full h-full flex grid grid-cols-1 grid-rows-3 gap-y-4 rounded-3xl sm:p-8 p-3 shadow-md">
 
                     <!-- title -->
                         <div class="grid grid-cols-2 grid-rows-1">
