Fixed general page text

--- a/views/en/general.handlebars
+++ b/views/en/general.handlebars
@@ -169,7 +169,7 @@
                                 <img src="/icons/cloudy-orange.png" alt="logo" class="w-[40px] h-[40px] bg-white rounded-full p-1">
                                 <div class="ml-4">
                                     <h1 class="sm:text-2xl font-medium text-[22px]">
-                                        Current Weather
+                                        Current Weather, Helsinki
                                     </h1>
                                 </div>
                             </div>
