--- a/views/en/weather.handlebars
+++ b/views/en/weather.handlebars
@@ -58,7 +58,7 @@
                     </div>
 
                     <!-- Today Hourly -->
-                    <div class="mx-2 mb-6 px-6 pt-6 pb-3 bg-white rounded-3xl shadow-md">
+                    <div class="mx-2 mb-6 px-6 pt-6 pb-3 bg-white rounded-3xl shadow-md hover:-translate-y-1 hover:scale-100 transition ease-in-out duration-300">
                         <div class="flex text-center overflow-x-auto scrolling-touch pb-3">
                             <!-- Hourly Cards -->
                             {{#each today}}
@@ -81,7 +81,7 @@
                     </div>
 
                     <!-- Today Conditions -->
-                    <div class="mx-2 px-6 py-6 bg-white rounded-3xl shadow-md">
+                    <div class="mx-2 px-6 py-6 bg-white rounded-3xl shadow-md hover:-translate-y-1 hover:scale-100 transition ease-in-out duration-300">
                         <h1 class="font-bold text-xl mb-6">Weather Conditions Now</h1>
 
                         <div class="flex flex-col sm:flex-row justify-between">
@@ -129,7 +129,7 @@
                 </div>
 
                 <!-- Next Days / Every Other Hour -->
-                <div class="flex-col bg-white rounded-3xl shadow-md lg:ml-6 mt-6 lg:mt-0 py-6 pl-6 lg:w-2/5 h-[625px]">
+                <div class="flex-col bg-white rounded-3xl shadow-md lg:ml-6 mt-6 lg:mt-0 py-6 pl-6 lg:w-2/5 h-[625px] hover:-translate-y-1 hover:scale-100 transition ease-in-out duration-300">
                     <h1 class="font-bold text-xl mb-6">Weather Forecast</h1>
                     <div class="overflow-y-auto scrolling-touch h-[90%]">
                         {{#each nextDays}}
