added 3 more cities for weather

--- a/views/en/weather.handlebars
+++ b/views/en/weather.handlebars
@@ -22,10 +22,13 @@
                             <option value="Espoo">Espoo</option>
                             <option value="Helsinki">Helsinki</option>
                             <option value="Jyvaskyla">Jyväskylä</option>
+                            <option value="Kalajoki">Kalajoki</option>
                             <option value="Kuopio">Kuopio</option>
+                            <option value="Narpio">Närpiö</option>
                             <option value="Oulu">Oulu</option>
                             <option value="Tampere">Tampere</option>
                             <option value="Turku">Turku</option>
+                            <option value="Vaasa">Vaasa</option>
                             <option value="Vantaa">Vantaa</option>
                         </select>
                     </div>
