--- a/views/en/layouts/main.handlebars
+++ b/views/en/layouts/main.handlebars
@@ -41,6 +41,9 @@
       <a href="/en/weather" class="m-0 p-0 text-gray-300 hover:text-white">
         Weather
       </a>
+      <a href="/en/history" class="m-0 p-0 text-gray-300 hover:text-white">
+        History
+      </a>
       
       <!-- lang, theme, settings -->
       <div class="flex rounded-3xl py-2 px-4 text-gray-300 bg-gray-700">
@@ -86,6 +89,7 @@
                   <li><a href="/en/general" class="m-0 text-[#4B49AC] hover:text-black text-lg font-bold">General</a></li>
                   <li><a href="/en/spot-prices" class="m-0 text-[#4B49AC] hover:text-black text-lg font-bold">Spot Prices</a></li>
                   <li class="pb-6"><a href="/en/weather" class="text-[#4B49AC] hover:text-black text-lg font-bold">Weather</a></li>
+                  <li class="pb-6"><a href="/en/history" class="text-[#4B49AC] hover:text-black text-lg font-bold">History</a></li>
                   
                   <!-- lang, theme, settings -->
                   <div class="inline-flex rounded-3xl py-2 px-6 text-gray-300 bg-gray-700">
