added Price Development text and needed code

--- a/views/en/spot_prices.handlebars
+++ b/views/en/spot_prices.handlebars
@@ -123,7 +123,8 @@
 
                         <!-- description -->
                         <h1 class="mt-3">
-                            In October 2023, the electricity price in SE1 - Luleå was 65% lower compared to the same period last year. This significant decrease was due to a combination of factors including increased renewable energy production, favorable weather conditions, and lower demand. As a result, consumers in Luleå enjoyed substantial savings on their electricity bills during this period.
+                            Today, {{dateToday}}, the electricity spot-price will range from {{lowestPriceToday}} to {{highestPriceToday}} snt/kWh. The average price of the day is {{averagePriceToday}} snt/kWh. These are considered to be {{consideredPrice}} prices. The current hours price is {{priceNowComparison}} compared to the same hours price yesterday.
+                            The prices are the same across all of Finland.
                         </h1>
                     </div>
 
