--- a/views/en/weather.handlebars
+++ b/views/en/weather.handlebars
@@ -38,7 +38,7 @@
             </div>
 
             <!-- middle content -->
-            <div class="flex flex-col lg:flex-row mt-10 pb-28">
+            <div class="flex flex-col lg:flex-row mt-10 pb-2">
 
                 <!-- Today -->
                 <div class="flex-col lg:w-3/5">
@@ -149,6 +149,8 @@
                     </div>
                 </div>
             </div>
+            <h1 class="mt-10 w-[600px]">If some data does not show up or the squares look empty, this means that we haven't yet gotten the necessary data, and it should instead appear in the next hour.
+            </h1>
         </div>
     </div>
 
