fixed width for text

--- a/views/en/weather.handlebars
+++ b/views/en/weather.handlebars
@@ -149,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <h1 class="mt-10 w-[600px]">If some data does not show up or the squares look empty, this means that we haven't yet gotten the necessary data, and it should instead appear in the next hour.
+            <h1 class="mt-10 max-w-[600px]">If some data does not show up or the squares look empty, this means that we haven't yet gotten the necessary data, and it should instead appear in the next hour.
             </h1>
         </div>
     </div>
