--- a/views/en/layouts/main.handlebars
+++ b/views/en/layouts/main.handlebars
@@ -31,7 +31,7 @@
         </a>
     </div>
 
-    <div id="menu" class="hidden md:flex mt-2 md:mt-0 md:space-x-11 xl:space-x-20 items-center">
+    <div id="menu" class="hidden lg:flex mt-2 lg:mt-0 lg:space-x-11 xl:space-x-20 items-center">
       <a href="/en/general" class="text-gray-300 hover:text-white">
         General
       </a>
@@ -43,6 +43,9 @@
       </a>
       <a href="/en/history" class="m-0 p-0 text-gray-300 hover:text-white">
         History
+      </a>
+      <a href="/en/AI" class="m-0 p-0 text-gray-300 hover:text-white">
+        AI Prediction
       </a>
       
       <!-- lang, theme, settings -->
@@ -76,7 +79,7 @@
       </div>
     </div>
           
-    <label class="relative z-40 cursor-pointer md:hidden py-5" for="mobile-menu">
+    <label class="relative z-40 cursor-pointer lg:hidden py-5" for="mobile-menu">
       <input class="peer hidden" type="checkbox" id="mobile-menu" />
         <div class="relative z-50 block h-[1px] w-7 bg-white bg-transparent content-[''] before:absolute before:top-[-0.35rem] before:z-50 before:block before:h-full before:w-full before:bg-white before:transition-all before:duration-200 before:ease-out before:content-[''] after:absolute after:right-0 after:bottom-[-0.35rem] after:block after:h-full after:w-full after:bg-white after:transition-all after:duration-200 after:ease-out after:content-[''] peer-checked:bg-transparent before:peer-checked:top-0 before:peer-checked:w-full before:peer-checked:rotate-45 before:peer-checked:transform before:peer-checked:bg-black after:peer-checked:bg-black after:peer-checked:bottom-0 after:peer-checked:w-full after:peer-checked:-rotate-45 after:peer-checked:transform">
   </div>
@@ -90,6 +93,7 @@
                   <li><a href="/en/spot-prices" class="m-0 text-[#4B49AC] hover:text-black text-lg font-bold">Spot Prices</a></li>
                   <li class="pb-6"><a href="/en/weather" class="text-[#4B49AC] hover:text-black text-lg font-bold">Weather</a></li>
                   <li class="pb-6"><a href="/en/history" class="text-[#4B49AC] hover:text-black text-lg font-bold">History</a></li>
+                  <li class="pb-6"><a href="/en/AI" class="text-[#4B49AC] hover:text-black text-lg font-bold">AI Prediction</a></li>
                   
                   <!-- lang, theme, settings -->
                   <div class="inline-flex rounded-3xl py-2 px-6 text-gray-300 bg-gray-700">
